sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:12: error: unclosed character literal
    print('i=')
             ^AlgSelectionSort:12: error: illegal start of simple expression
    print('i=')
             ^AlgSelectionSort:15: error: ')' expected but '}' found.
  }
  ^